syntax = "proto3";

package searchService;

service Search {
    rpc search (SearchRequest) returns (SearchReply) {}
}

message SearchRequest {
  //The userID of the person who does the search.
  string userID = 1;

  //exactMatch- which sets the type of search(relevant to the content search).
  bool exactMatch=2;

  //The fields which contains what the user wants to search
  MetaData fields = 3;
  
  //resultsAmount- the amount of results to be returned
  Amount resultsAmount = 4;
}

message Amount {
  int32 from = 1;  
  int32 amount = 2;
}
  
message MetaData {
  string fileName = 1;
  Range createdAt = 2;
  Range updatedAt = 3;
  string type = 4;
  string content = 5;
  string ownerId = 6;
  string sharedWith = 7;
}

message SearchReply {

  message fileResult{

    //fileIDs- Array of Ids of the files that matched the search.
    string fileId = 1;

    //highlightedContent- Array of the Content that matched the content search(with highlighted words).
    string highlightedContent = 2;

    //highlightedContent- Array of the Content that matched the content search(with highlighted words).
    string highlightedFileName = 3;
  }
  
 repeated fileResult results=1;
}

// message Owner {
//   string userId = 1;
//   string hierarchy = 2;
//   string name = 3;
// }

message Range {
  int64 start = 1;
  int64 end = 2;
}